Add MongoDB integration and dependency injection
- Added new package references to `Server.csproj` and `UOContent.csproj` for `Microsoft.Extensions.DependencyInjection`, `MongoDB.Bson`, and `MongoDB.Driver`.
- Introduced new using directives in `Accounts.cs` for `Server.Models`, `Microsoft.Extensions.DependencyInjection`, `System.Text.Json`, `MongoDB.Bson`, and `MongoDB.Driver`.
- Added a logger instance in `Accounts.cs`.
- Modified the `Add` method in `Accounts.cs` to include MongoDB client initialization, database and collection selection, and insertion of user account data.
- Created a new `UserAccount` class in `UserAccount.cs` under the `Server.Models` namespace with `Username` and `Password` properties.

--- a/Projects/Server/Server.csproj
+++ b/Projects/Server/Server.csproj
@@ -35,6 +35,9 @@
     <ItemGroup>
         <PackageReference Include="CommunityToolkit.HighPerformance" Version="8.2.2" />
         <PackageReference Include="LibDeflate.Bindings" Version="1.0.2.120" />
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
+        <PackageReference Include="MongoDB.Bson" Version="2.28.0" />
+        <PackageReference Include="MongoDB.Driver" Version="2.28.0" />
         <PackageReference Include="PollGroup" Version="1.5.1" />
         <PackageReference Include="System.IO.Hashing" Version="8.0.0" />
 
