--- a/Projects/UOContent/UOContent.csproj
+++ b/Projects/UOContent/UOContent.csproj
@@ -39,9 +39,12 @@
         </ProjectReference>
         <PackageReference Include="LibDeflate.Bindings" Version="1.0.2.120" />
         <PackageReference Include="MailKit" Version="4.7.1" />
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
         <PackageReference Include="Microsoft.Extensions.FileSystemGlobbing" Version="8.0.0" />
         <PackageReference Include="CommunityToolkit.HighPerformance" Version="8.2.2" />
         <PackageReference Include="Argon2.Bindings" Version="1.16.1" />
+        <PackageReference Include="MongoDB.Bson" Version="2.28.0" />
+        <PackageReference Include="MongoDB.Driver" Version="2.28.0" />
         <PackageReference Include="Zstd.Binaries" Version="1.6.0" />
 
         <PackageReference Include="ModernUO.Serialization.Annotations" Version="2.9.1" />
